@@ -7,6 +7,6 @@ dependencies have been installed.
 
 For additional information on the Foomatic printing system, please see
 /usr/share/doc/foomatic-db-engine/README.Debian or
-http://www.linuxprinting.org/foomatic.html
+http://www.openprinting.org/foomatic.html
 
  -- Chris Lawrence <lawrencc@debian.org>, Tue, 10 Jun 2003 17:49:37 -0500
