@@ -79,4 +79,7 @@ Modified by Patrick Powell (<papowell at astart.com>).
 
 .SH BUGS
 
-Please send bug reports to foomatic-devel@linuxprinting.org.
+Please post bug reports on
+
+http://lists.freestandards.org/mailman/listinfo/printing-foomatic
+
