@@ -24,4 +24,7 @@ project using output from the associated binary.
 .SH BUGS
 This manpage needs editing.
 
-Please send bug reports to foomatic-devel@linuxprinting.org.
+Please post bug reports on
+
+http://lists.freestandards.org/mailman/listinfo/printing-foomatic
+
