@@ -74,4 +74,7 @@ Modified and updated by Patrick Powell <\fIpapowell at astart.com\fF>.
 .SH BUGS
 None so far.
 
-Please send bug reports to foomatic-devel@linuxprinting.org.
+Please post bug reports on
+
+http://lists.freestandards.org/mailman/listinfo/printing-foomatic
+
